Ticket #1522 (closed defect: fixed)

Opened 6 months ago

Last modified 6 months ago

libvlc_media_list_player_is_playing input thread locking error

Reported by: littlejohn Assigned to:
Priority: normal Milestone: 0.9.0 bugs
Component: LibVLC Version: master
Severity: normal Keywords: libvlc-control media_list_player
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description

I get a segfault in pthread_lock when calling libvlc_media_list_player_is_playing after the media_list_player has been successfully created. See org.videolan.jvlc.internal.MediaListPlayerTest?.mediaListPlayerIsPlayingTest() to know how to reproduce the test. Basically create a new media_list_player and call the libvlc_media_list_player_is_playing soon after.

Attachments

hs_err_pid25064.log (23.1 kB) - added by littlejohn on 03/16/08 16:59:22.

Change History

03/16/08 16:59:22 changed by littlejohn

  • attachment hs_err_pid25064.log added.

03/16/08 20:14:21 changed by littlejohn

  • status changed from new to closed.
  • resolution set to fixed.

03/16/08 20:14:56 changed by littlejohn

libvlc_get_input_thread checks if the given input is null before locking.