fix for libvlc_get_input_thread: check for null before locking. fixes #1522